[gd_scene load_steps=2 format=2]

[ext_resource path="res://UserList.gd" type="Script" id=1]

[node name="UserList" type="Node2D"]
position = Vector2( 10.0793, 1.25993 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 113.0
margin_top = 130.0
margin_right = 343.0
margin_bottom = 397.0

[node name="VBoxPlayer" type="VBoxContainer" parent="Panel"]
margin_left = 1.0
margin_top = 3.0
margin_right = 229.0
margin_bottom = 264.0

[node name="lb_title" type="Label" parent="Panel/VBoxPlayer"]
margin_right = 228.0
margin_bottom = 14.0
text = "User List"
align = 1

[node name="scroller" type="ScrollContainer" parent="Panel/VBoxPlayer"]
margin_top = 18.0
margin_right = 228.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxList" type="VBoxContainer" parent="Panel/VBoxPlayer/scroller"]
margin_right = 228.0
size_flags_horizontal = 3
